# ai-agent-conversation

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.py  simple_gradio.py  test_gradio.py  test_openai.py
.windsurf/rules/: spec.md
app/: __init__.py  main.py
app/config/: settings.py
app/frontend/: ui.py
app/graph/: flow.py
app/models/: schemas.py
app/sample/: langgraph_fixed_questions.py
app/utils/: helpers.py
notebook/: checkpointer.ipynb  qa-app.ipynb
tests/: __init__.py  test_api_e2e.py
tests/integration/: test_state_restoration.py
tests/unit/: test_flow.py
